--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -84,9 +84,13 @@
 
     <style>
         .modal-dialog {
-            width: 500px;
+            width: 244px;
             margin: 302px auto;
         }
+        .img {
+            margin-right: 22px;
+}
+        
     </style>
     <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
@@ -104,7 +108,8 @@
                     </div>
                     <div *ngFor="let user of likedUsers">
                         <div>
-                            <img class="user-image comment-img img-circle"  src="../../../../profile/{{user?.imageUrl}}" />
+                            
+                            <img class="user-image comment-img img-circle img" src="../../../../profile/{{user?.imageUrl}}"/>
 
                             {{user?.name}}
                         </div>
