--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
@@ -1,1 +1,19 @@
-﻿<h1>Comment</h1>
+﻿<div class="collapse comment-panel" id="questionComment{{questionId}}">
+    <form #commentForm="ngForm" class="form-horizontal " role="form">
+        <div class="comment-input">
+            <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
+            <input class="form-control" id="comment" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" />             <button type="button" class="btn btn-primary" (click)="submitComment(questionId)">Comment</button>
+        </div>
+    </form>
+    <div class="clearfix"></div>
+    <div class="card card-block">
+        <div *ngFor="let comment of comments" class="clearfix">
+            <div *ngIf="comment">
+                <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
+                <div class="header-info">{{comment?.userViewModel?.name}}</div>
+                <p class="answer-text">{{comment.commentText}}</p>
+            </div>
+            <hr />
+        </div>
+    </div>
+</div>
