akash:topfive left menu componet added to the project

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,32 +1,37 @@
 ﻿<div class="row">
-    <div class="col-md-3 left-gap"></div>
+<div class="col-md-3 left-gap">
+    <topfive-question-left-menu></topfive-question-left-menu>
+</div>
     <div class="col-md-6">
         <div class="tab" *ngFor="let question of questions">
             <div class="panel-article">
                 <div class="row  ">
-                    <!--<div class="col-sm-1 left-gap">
-                    </div>-->
+                    
+                    
                     <div class="col-sm-11 questions-container">
                         <div class="left-border">
-                            <img class="image-border" src="../../../../images/border.png" />
+                            <img class="image-border" src="../../../../images/border.png"/>
                         </div>
                         <div class="details-container">
                             <h3>
                                 <a [routerLink]="['/question/detail',question.id]">{{question.title}}</a>
                             </h3>
                             <div class="article-details">
-                                <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
+                                <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}"/>
 
                                 <div class="header-info">{{question.userViewModel.name}}, {{question.userViewModel.occupation}} {{question?.createdOn | date: 'dd MMM, yyyy'}} </div>
                                 Categories: <h5 *ngFor="let c of question.categories;let i = index; let last = last" class="subtitle">{{c?.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
-                                <div *ngIf="question.lastAnswer?.text"><p [innerHTML]="question.lastAnswer?.text"></p><span><a [routerLink]="['/question/detail',question.id]">Read more..</a></span></div>
+                                <div *ngIf="question.lastAnswer?.text">
+                                    <p [innerHTML]="question.lastAnswer?.text"></p><span><a [routerLink]="['/question/detail',question.id]">Read more..</a></span>
+                                </div>
                                 <div *ngIf="question.answers.length!=0"> by {{question.answers[question.answers.length-1]?.userViewModel?.name}} {{question.answers[question.answers.length-1]?.createdOn | date: 'dd MMM, yyyy'}}</div>
-                                <hr />
+                                <hr/>
                                 <div class="status-panel">
-                                    <img class="like-logo" src="../images/fade-logo.png" />
+                                    <img class="like-logo" src="../images/fade-logo.png"/>
                                     <!--<div class="status-line">{{question?.likes?.length}}</div>-->
                                     <a href="#" data-toggle="modal" data-target="#myModal" (click)="submitLikeUserDetails(question.id)"> {{question?.likes?.length}}</a>
-                                    <a (click)="submitLike(question.id)"><div class="status-line">Like</div></a>
+                                    <a (click)="submitLike(question.id)">
+                                        <div class="status-line">Like</div></a>
                                     <div class="status-line like-border"></div>
                                     <div class="status-line">{{question?.viewCount}}</div>
                                     <div class="status-line">Leidos</div>
@@ -39,12 +44,12 @@
                                         <a href="https://www.facebook.com/sharer/sharer.php?u={{question.shareUrl}}"
                                            class="SHARE FACEBOOK"
                                            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
-                                            <img class="social-image" src="../images/facebooklogo.jpg" />
+                                            <img class="social-image" src="../images/facebooklogo.jpg"/>
                                         </a>
 
                                         <a href="https://twitter.com/home?status={{question.shareUrl}}" class="SHARE TWITTER"
                                            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
-                                            <img class="social-image" src="../images/twitter.png" />
+                                            <img class="social-image" src="../images/twitter.png"/>
                                         </a>
 
                                         <h5>Respuestas</h5><span class="counter-box">{{question?.answers?.length}}+</span>
@@ -54,8 +59,8 @@
                                 <div class="collapse comment-panel" id="questionComment{{question.id}}">
                                     <form #commentForm="ngForm" class="form-horizontal " role="form">
                                         <div class="comment-input">
-                                            <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl}}" />
-                                            <input class="form-control" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" id="comment" />
+                                            <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl}}"/>
+                                            <input class="form-control" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" id="comment"/>
                                             <button type="button" class="btn btn-primary" (click)="submitComment(question.id)">Submit</button>
                                         </div>
                                     </form>
@@ -63,14 +68,14 @@
                                     <div class="card card-block">
                                         <div *ngFor="let comment of question.comments" class="clearfix">
                                             <div *ngIf="comment">
-                                                <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
+                                                <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}"/>
                                                 <div class="header-info">{{comment?.userViewModel?.name}}</div>
 
 
 
                                                 <p class="answer-text">{{comment.commentText}}</p>
                                             </div>
-                                            <hr />
+                                            <hr/>
                                         </div>
                                     </div>
                                 </div>
