akash:top 5 question completed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.css
@@ -10,9 +10,9 @@
     color: #F6912B;
 }
 
-a {
-    font-weight: 600;
-}
+/*a {
+    font-weight: 300;
+}*/
 
 .menu-container {
     float: right;
