--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,5 +1,7 @@
 ﻿<div class="row">
-    <div class="col-md-3 left-gap"></div>
+<div class="col-md-3 left-gap">
+    <topfive-question-left-menu> </topfive-question-left-menu>
+</div>
     <div class="col-md-6">
         <div class="tab" *ngFor="let question of questions">
             <div class="panel-article">
