--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -1,25 +1,53 @@
 ﻿<div class="status-panel">
     <img class="like-logo" src="../images/fade-logo.png" />
-    <div class="status-line"></div>  <!--{{question?.likes?.length}}-->
-    <a (click)="submitLike(question.id)"><div class="status-line">Like</div></a>
+    <a href="#" data-toggle="modal" data-target="#myModal" (click)="submitLikeUserDetails(questionObj.id)"> {{questionObj?.likes?.length}}</a>
+    <a (click)="submitLike(questionObj.id)"><div class="status-line">Like</div></a>
     <div class="status-line like-border"></div>
-    <div class="status-line"><!--{{question?.viewCount}}--></div>
+    <div class="status-line">{{questionObj?.viewCount}}</div>
     <div class="status-line">Leidos</div>
-    <a data-toggle="collapse" attr.data-target="#questionComment{{question.id}}" aria-expanded="false">
-        {{question.comments?.length}} comments
+    <a data-toggle="collapse" aria-expanded="false" attr.data-target="#questionComment{{questionObj.id}}">
+        {{questionObj.comments?.length}} comments
     </a>
     <div class="social-icon">
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{question.shareUrl}}"
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{questionObj.shareUrl}}"
            class="SHARE FACEBOOK"
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
             <img class="social-image" src="../images/facebooklogo.jpg" />
         </a>
 
-        <a href="https://twitter.com/home?status={{question.shareUrl}}" class="SHARE TWITTER"
+        <a href="https://twitter.com/home?status={{questionObj.shareUrl}}"
+           class="SHARE TWITTER"
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
             <img class="social-image" src="../images/twitter.png" />
         </a>
+        <h5>Respuestas</h5><span class="counter-box">{{questionObj?.answers?.length}}+</span>
+    </div>
+</div>
 
-        <h5>Respuestas</h5><span class="counter-box">{{question?.answers?.length}}+</span>
+<!--====Modal====-->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            </div><div class="container">
+            </div>
+            <div class="modal-body">
+                <div *ngIf="likedUsers?.length==0">
+                    No one liked yet...be the first to like
+                </div>
+                <div *ngFor="let user of likedUsers">
+                    <div>
+                        <img class="user-image comment-img img-circle img" src="../../../../profile/{{user?.imageUrl}}" />
+                        {{user?.name}}
+                    </div>
+                    <br />
+                </div>
+                <div class="modal-footer">
+                    <div style="display: none">.</div>
+
+                </div>
+            </div>
+        </div>
     </div>
 </div>
