--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,16 +1,4 @@
-﻿<style>
-    .left-panel {
-        width: 20%;
-    }
-
-    .tab-content-panel {
-        width: 60%;
-        float: left;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-</style>
-<div class="row">
+﻿<div class="row">
     <div class="left-panel">
         <topfive-question-left-menu> </topfive-question-left-menu>
     </div>
@@ -20,7 +8,7 @@
                 <div class="row  ">
                     <!--<div class="col-sm-1 left-gap">
                     </div>-->
-                    <div class="col-sm-11 questions-container">
+                    <div class="questions-container">
                         <div class="left-border">
                             <img class="image-border" src="../../../../images/border.png" />
                         </div>
