--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
@@ -4,39 +4,55 @@
   border-top:1px solid #eeeeee;
   border-bottom:1px solid #eeeeee;
 }*/
-.questions-container{
-  margin-bottom: 0;
-  padding-bottom: 15px;
-  border-top:1px solid #eeeeee;  
+.left-panel {
+    float: left;
+    width: 20%;
 }
-.questions-container:hover{
-    background-color:#f5f5f5;    
+
+.tab-content-panel {
+    width: 60%;
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
 }
-.social-icon>h5{
-    display:inline;
+
+.questions-container {
+    margin-bottom: 0;
+    padding-bottom: 15px;
+    border-top: 1px solid #eeeeee;
 }
-.details-container{
-    margin-left:10px;
+
+    .questions-container:hover {
+        background-color: #f5f5f5;
+    }
+
+.social-icon > h5 {
+    display: inline;
 }
+
+.details-container {
+    margin-left: 10px;
+}
+
 .arrow_box {
     position: relative;
     background: #88b7d5;
 }
 
-.arrow_box:after {
-    bottom: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: rgba(136, 183, 213, 0);
-    border-bottom-color: #88b7d5;
-    border-width: 30px;
-    margin-left: -30px;
-}
+    .arrow_box:after {
+        bottom: 100%;
+        left: 50%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+        border-color: rgba(136, 183, 213, 0);
+        border-bottom-color: #88b7d5;
+        border-width: 30px;
+        margin-left: -30px;
+    }
 
 .left-footer {
     float: left;
@@ -53,10 +69,12 @@
 .left-gap {
     border: 1px solid transparent;
 }
-.subtitle{
+
+.subtitle {
     font-style: italic;
 }
-.details-container>h5 {
+
+.details-container > h5 {
     font-size: 15px;
     font-family: myriadpro-regular;
     display: inline-block;
@@ -68,6 +86,7 @@ h2 {
     margin-top: 0;
     margin-bottom: 0;
 }
+
 h5 {
     display: inline;
 }
@@ -75,8 +94,8 @@ h5 {
 p {
     font-size: 17px;
     font-family: myriadpro-regular;
-    margin:0;
-    overflow:hidden;
+    margin: 0;
+    overflow: hidden;
     color: #7b7474;
 }
 
