akash:topfive used added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -13,6 +13,7 @@
 <div class="row">
     <div class="left-panel">
         <topfive-question-left-menu> </topfive-question-left-menu>
+        <topfive-user></topfive-user>
     </div>
     <div class="tab-content-panel">
         <div class="tab" *ngFor="let question of questions">
