--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-user.component.html
@@ -1,16 +1,20 @@
 ﻿<div class="menu-container">
     <div class="row">
         <div>
-            <div ><h4>Top Users</h4></div>
-            
-            <ul >
-                <li *ngFor="let topFiveUser of topFiveUsers">
-                    <!--<img  src="../../../../profile/{{topFiveUser?.imageUrl}}" />-->
-
-                     {{topFiveUser?.name}}
+            <div class="question-title"><h4>Top Users</h4></div>
+            <img src="../../../../images/border-horizontal.png" />
+            <ul class="question-list" style="margin-left: -22px;">
+                <li *ngFor="let topFiveUser of topFiveUsers" style="list-style-type: none;">
+                    <div>
+                        <img class="user-image img-circle" src="../../../../profile/{{topFiveUser?.imageUrl}}" />
+                    </div>
+                    <div style="margin-left: 37px!important">
+                        <!--{{topFiveUser?.name}}-->
+                        <a [routerLink]="['/dashboard/detail/',topFiveUser?.id]"> {{topFiveUser?.name}}</a>
+                    </div>
 
                 </li>
-            </ul>-->
+            </ul>
         </div>
     </div>
 </div>
