akash:Category added to tab-pannel

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -2,6 +2,7 @@
     <div class="left-panel">
         <topfive-question-left-menu> </topfive-question-left-menu>
         <topfive-user></topfive-user>
+        <question-left-menu></question-left-menu>
     </div>
     <div class="tab-content-panel">
         <div class="tab" *ngFor="let question of questions">
