--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -96,7 +96,7 @@ a {
 
 .search-input {
     background-color: #f5f5f5;
-    width: 86%;
+    width: 88%;
 }
 
 .form-control {
@@ -149,8 +149,8 @@ a {
 
 @media screen and (min-width: 768px) {
     #adv-search {
-        width: 840px;
-        margin: 0 auto;
+        width: 755px;
+        margin: 5px auto 0px;
     }
 
     .dropdown.dropdown-lg {
