--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -1,4 +1,52 @@
-﻿<div class="z-header" [ngClass]="placeBottom"  id="search-box" (click)="handleClick($event)">
+﻿
+<div class="z-header" [ngClass]="placeBottom" id="search-box" (click)="handleClick($event)">
+    <div class="input-group" id="adv-search">
+
+        <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form" id="search-panel">
+            <input type="text" class="form-control search-input fixed-height" #searchText placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off" (click)="showModal()"
+                   [(ngModel)]="title" required name="titleName" #titleName="ngModel" (keyup)=filterQuestions() />
+            <div class="suggestions" id="suggestion" *ngIf="(filteredQuestionList.length > 0) || (categoryMatched.length > 0) ">
+                <div>
+                    <div class="question-components">
+                        <select class="form-control catagory-dropdown" id="Category" required [(ngModel)]="categoryID" name="category" #categoryObj="ngModel">
+                            <option [value]="-1" disabled="true" selected>Selecciona la categoría</option>
+                            <option *ngFor="let category of categories" [value]="category.id">
+                                {{category.name}}
+                            </option>
+                        </select>
+                    </div>
+                    <div class="question-components">
+                        <textarea placeholder="Agrega detalle de tu pregunta - Optional" [(ngModel)]="body" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>
+
+                    </div>
+                </div>
+                <ul class="question-List">
+                    <li *ngFor="let item of filteredQuestionList">
+                        <a (click)="selectQuestionDetails(item)">{{item.title}}</a>
+                        <hr />
+                    </li>
+                    <li>
+                        <a><span class="search-footer">Topics:</span>  {{categoryMatched}}</a>
+                        <hr />
+                    </li>
+                    <li>
+                        <a><span class="search-footer">Search:</span>  {{title?title+'?':''}}</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="input-group-btn">
+                <div class="btn-group" role="group">
+
+                    <button type="submit" class="btn btn-primary fixed-height" [disabled]="!titleName.valid"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><span class="ask-text">Enviar</span></button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+<!--<div class="z-header" [ngClass]="placeBottom"  id="search-box" (click)="handleClick($event)">
     <div class="input-group" id="adv-search">
 
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="form-horizontal" role="form" id="search-panel">
@@ -43,4 +91,4 @@
             </div>
         </form>
     </div>
-</div>
+</div>-->
