--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
@@ -1,30 +1,35 @@
 .tab-panel-container {
-    padding-right: 8px;
-    padding-left: 20px;
     margin-right: auto;
     margin-left: auto;
     margin-top: 25px;
     margin-bottom: 130px;
-    width: 67%;
+    width: 755px;
+    position: relative;
 }
 
 span {
     display: block;
 }
-
+.left-arrow{
+    left:-25px;
+}
+.right-arrow{
+    right:-25px;
+}
 
 .tab-header-col-md-1 {
     float: left;
     min-height: 66px;
     padding-top: 19px;
+    position:absolute;
 }
 
 .tab-header-col-md-10 {
-    width: 92%;
+    width: 100%;
     float: left;
     overflow: hidden; /* used for carousel*/
-    margin-left: 15px;
-    margin-right: 15px;
+    /*margin-left: 15px;
+    margin-right: 15px;*/
 }
 
 
@@ -38,18 +43,18 @@ span {
     width: 4000px;
 }
 
-.tabs > .tab {
-    position:relative;
-    padding: 12px;
-    font-size: 16px;
-    display: block;
-    float: left;
-    line-height: 45px;
-    background-color: #e0dede;
-    margin: 0 10px;
-    min-width: 150px;
-    text-align: center;
-}
+    .tabs > .tab {
+        position: relative;
+        padding: 12px;
+        font-size: 16px;
+        display: block;
+        float: left;
+        line-height: 45px;
+        background-color: #e0dede;
+        margin: 0 10px;
+        min-width: 150px;
+        text-align: center;
+    }
 
 .tab-text {
     font-family: myriadpro-regular;
@@ -85,6 +90,6 @@ a {
     background-color: #fdbc1e;
 }
 
-.tabs > .active > a, .tabs > .active > a:hover, .tabs > .active > a:focus {
-    color: white;
-}
+    .tabs > .active > a, .tabs > .active > a:hover, .tabs > .active > a:focus {
+        color: white;
+    }
