--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -1,7 +1,10 @@
 ﻿.input-group-btn {
     width: auto;
 }
-
+.ask-text{
+    padding-left:5px;
+    margin-right:7px;
+}
 .modal-container {
     position: fixed;
     top: 0;
