--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.css
@@ -6,14 +6,13 @@
 }*/
 .left-panel {
     float: left;
-    width: 20%;
+    width: 23%;
 }
 
 .tab-content-panel {
-    width: 60%;
+    width: 55%;
     float: left;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin-left: -7px;
 }
 
 .questions-container {
