akash:Update of profile link

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-user.component.html
@@ -10,7 +10,7 @@
                     </div>
                     <div style="margin-left: 37px!important">
                         <!--{{topFiveUser?.name}}-->
-                        <a [routerLink]="['/dashboard/detail/',topFiveUser?.id]"> {{topFiveUser?.name}}</a>
+                        <a [routerLink]="['/dashboard/viewprofile/general/',topFiveUser?.id]"> {{topFiveUser?.name}}</a>
                     </div>
 
                 </li>
