Design changs for user info

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -19,6 +19,7 @@
 @import "site/image-border";
 @import "site/comment";
 @import "site/userinfo";
+@import "site/color-scheme";
 .right-border{
     border-right:1px solid;
     color:white;
