--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/typography.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/typography.less
@@ -1,4 +1,10 @@
-﻿h1 {
+﻿ul{
+    padding:0;
+}
+h4,h3 ,.h4, h5, .h5, h6, .h6{
+    margin:0;
+}
+h1 {
     font-family: "myriadpro-regular";
     font-size: 25px;
     font-weight: 700;
@@ -11,7 +17,6 @@ h3 {
     font-family: "myriadpro-regular";
     font-size: 20px;
     line-height: 27.5px;
-    margin-bottom: 10px;
     color: rgb(51,51,51);
 }
 
