--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/nav/apNav.css
@@ -12,11 +12,11 @@
         padding-top: 5px;
     }
 
-    .user-image {
+    /*.user-image {
         height: 30px;
         width: 30px;
         border-radius: 20px;
-    }
+    }*/
 
     .badge {
         /*display: block;*/
