--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -9,16 +9,24 @@
             <div class="panel-article">
                     <div class="questions-container">
                         <div class="details-container">
+                            <ul>
+                                <li>{{question.categories[0].name}}</li>
+                                <li class="question-info">Question Topic</li>
+                                <li class="question-info">Question Level</li>
+                                <li class="question-info">{{question?.createdOn | date: 'MMM, yyyy'}}</li>
+                            </ul>
                             <h3>
                                 <a [routerLink]="['/question/detail',question.id]">{{question.title}}</a>
                             </h3>
                             <div class="article-details">
-                                <img class="user-image" src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
-
-                                <div class="header-info">{{question.userViewModel.name}}, {{question.userViewModel.occupation}} {{question?.createdOn | date: 'dd MMM, yyyy'}} </div>
-                                Categories: <h5 *ngFor="let c of question.categories;let i = index; let last = last" class="subtitle">{{c?.name}} <span *ngIf="!last">,&nbsp;</span> </h5>
+                                <!--<user-info [user]="question?.userViewModel" [viewDate]="question?.createdOn"></user-info>-->
+                                <img class="user-image " src="../../../../profile/{{question.userViewModel?.imageUrl}}" />
+                                <div class="user-info">
+                                    <div class="user-detail">{{question.userViewModel.name}}, {{question.userViewModel.occupation}}  </div>
+                                    <div class="user-detail light-gray">{{question?.createdOn | date: 'dd MMM, yyyy'}}</div>
+                                </div>
+                                <div class="clearfix"></div>
                                 <div *ngIf="question.lastAnswer?.text"><p [innerHTML]="question.lastAnswer?.text"></p><span><a [routerLink]="['/question/detail',question.id]">Read more..</a></span></div>
-                                <div *ngIf="question.answers.length!=0"> by {{question.answers[question.answers.length-1]?.userViewModel?.name}} {{question.answers[question.answers.length-1]?.createdOn | date: 'dd MMM, yyyy'}}</div>
                                 <hr />
                                 <ap-status [questionObj]="question"> </ap-status>
                                 <ap-comment [questionId]="question.id"></ap-comment>
