--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.css
@@ -1,4 +1,15 @@
-﻿
+﻿.other-function{
+    padding-bottom:5px;
+    display: inline-block;
+}
+.number-box{
+    background-color: rgba(236, 234, 234, 0.83);
+    min-width: 15px;
+    text-align: center;
+    border-radius: 1px;
+    display: inline-block;
+    padding: 1px;
+}
 .counter-box {
     position: relative;
     background: #107ebf;
