--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.css
@@ -1,1 +1,25 @@
-﻿
+﻿.user-info {
+    padding-top: 15px;
+    float: left;
+    display: block;
+}
+
+.user-info:before {
+    content: "";
+    clear: both;
+}
+
+.user-image {
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.user-detail {
+    font-size: 13px;
+    font-style: italic;
+    font-family: myriadpro-regular;
+    line-height: 12px;
+}
