--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-question-left-menu.component.html
@@ -1,14 +1,9 @@
 ﻿<div class="menu-container">
-    <div class="row">
-        <div>
-            <div class="question-title"><h4>Top Questions</h4></div>
-            <img src="../../../../images/border-horizontal.png" />
-            <ul class="question-list">
-                <li *ngFor="let topFiveQuestion of topFiveQuestions">
-                    <a [routerLink]="['/question/detail',topFiveQuestion.id]"> {{topFiveQuestion.title}}</a>
-
-                </li>
-            </ul>
-        </div>
-    </div>
+    <div class="question-title"><h4>Top Questions</h4></div>
+    <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
+    <ul class="question-list">
+        <li *ngFor="let topFiveQuestion of topFiveQuestions">
+            <a [routerLink]="['/question/detail',topFiveQuestion.id]"> {{topFiveQuestion.title}}</a>
+        </li>
+    </ul>
 </div>
