--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/left-menu/topfive-user.component.html
@@ -1,8 +1,7 @@
 ﻿<div class="menu-container">
-    <div class="row">
         <div>
             <div class="question-title"><h4>Top Users</h4></div>
-            <img src="../../../../images/border-horizontal.png" />
+            <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
             <ul class="question-list" style="margin-left: -22px;">
                 <li *ngFor="let topFiveUser of topFiveUsers" style="list-style-type: none;">
                     <div>
@@ -16,5 +15,4 @@
                 </li>
             </ul>
         </div>
-    </div>
 </div>
