--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
@@ -1,11 +1,7 @@
 ﻿<div class="menu-container">
-    <div class="row">
-        <div>
-            <div class="question-title"><h3>Categories</h3></div>
-            <img src="../../../../images/border-horizontal.png" />
-            <ul class="category-list">
-                <li *ngFor="let category of categories"><a [routerLink]="['/question/home',category.id]" > {{category.name}}</a></li>
-            </ul>
-        </div>
-    </div>
+    <div class="question-title"><h3>Categories</h3></div>
+    <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
+    <ul class="category-list">
+        <li *ngFor="let category of categories"><a [routerLink]="['/question/home',category.id]"> {{category.name}}</a></li>
+    </ul>
 </div>
