--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-left-menu/question-left-menu.component.html
@@ -1,4 +1,4 @@
-﻿<div class="menu-container">
+﻿<div id="category" class="menu-container">
     <div class="question-title"><h3>Categories</h3></div>
     <img class="horizontal-border" src="../../../../images/border-horizontal.png" />
     <ul class="category-list">
